[package]
name = "penguin-config"
version = "0.1.0"
authors = ["Henrik Nilsson <github.com/Henrik-N>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["penguin-config-derive"]

[dependencies] 
# ----- Derive macro ----- #
penguin-config-derive = { path = "penguin-config-derive" }

# ----- Serializiation ----- #
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = { version = "1.0" }

