[package]
name = "penguin-config"
version = "0.1.0"
authors = ["Henrik Nilsson <github.com/Henrik-N>"]
edition = "2021"
license = "MIT"
description = "Read json files as Rust structs with a simple derive macro."
repository = "https://github.com/Henrik-N/penguin-config"
#homepage = "https://github.com/Henrik-N/penguin-config"
#documentation = "https://github.com/Henrik-N/penguin-config"


keywords = ["penguin-engine", "config", "configuration", "serde", "serde_json"]
categories = ["config"]

[workspace]
# ----- Derive macro ----- #
members = ["penguin-config-derive"]
default-members = ["penguin-config-derive"]

[dependencies]
# ----- Serializiation ----- #
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = { version = "1.0" }
