[package]
name = "penguin-config"
version = "0.1.0"
authors = ["Henrik Nilsson <github.com/Henrik-N>"]
edition = "2021"
license = "MIT"
description = "Read json files as Rust structs with a simple derive macro."
repository = "https://github.com/Henrik-N/penguin-config"

keywords = ["penguin-engine", "config", "configuration", "serde", "serde_json"]
categories = ["config"]

[lib]

[dependencies]
# ----- Derive macro ----- #
penguin-config-derive = { version = "0.1.1", path = "penguin-config-derive"}

# ----- Serializiation ----- #
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = { version = "1.0" }

