[package]
name = "penguin-config-derive"
version = "0.1.0"
authors = ["Henrik Nilsson <github.com/Henrik-N>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/Henrik-N/penguin-config"
description = "See penguin-config."

[lib]
proc-macro = true

[dependencies]
syn = "1.0.82"
quote = "1.0.10"
proc-macro2 = "1.0"
darling = "0.13.1"

